@@ -1,4 +1,8 @@
-﻿drkns 27.02.2016 18:05:26 +0200 - build 4564
+﻿drkns 28.02.2016 20:01:24 +0200 - build 4565
+
+1. При детаче консоли (Ctrl+Shift+Tab) скопируем алиасы из старой в новую.
+
+drkns 27.02.2016 18:05:26 +0200 - build 4564
 
 1. Рефакторинг.
 
